sistema de ranking
se codifico un sistema de ranking de jugadores, el jugador pone su nombre y se compara con los puntajes anteriores, si es mayor a uno de la lista, se sobrescribe por el nuevo usuario, además se creo una carpeta assets en donde están las fuentes, imágenes y archivos de texto para los niveles y la tabla de clasificaciones

--- a/Proyecto Progra l - match/Proyecto Progra l - match/Proyecto Progra l - match.vcxproj
+++ b/Proyecto Progra l - match/Proyecto Progra l - match/Proyecto Progra l - match.vcxproj
@@ -162,6 +162,7 @@ sfml-audio.lib</AdditionalDependencies>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="normalGem.cpp" />
     <ClCompile Include="PowerGem.cpp" />
+    <ClCompile Include="Ranking.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
@@ -170,6 +171,7 @@ sfml-audio.lib</AdditionalDependencies>
     <ClInclude Include="IceGem.h" />
     <ClInclude Include="normalGem.h" />
     <ClInclude Include="PowerGem.h" />
+    <ClInclude Include="Ranking.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
