--- a/Proyecto Progra l - match/Proyecto Progra l - match/Proyecto Progra l - match.vcxproj.filters
+++ b/Proyecto Progra l - match/Proyecto Progra l - match/Proyecto Progra l - match.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="normalGem.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Ranking.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
@@ -54,6 +57,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="normalGem.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Ranking.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
